fixed the createSession remeber value to be working, added experiemental blur feat. behind elements

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,7 +28,9 @@ body {
     rgb(var(--background-start-rgb));
 
 }
-
+.filter-blur {
+  filter: url(#blur-and-scale);
+}
 /* width */
 ::-webkit-scrollbar {
   height: 0;
